--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.17.0",
+    "@nuxt/ui-pro": "^1.3.1",
     "nuxt": "^3.12.3",
-    "vue": "latest"
+    "vue": "latest",
+    "yup": "^1.4.0"
   }
 }
