--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/ui": "^2.17.0",
     "@nuxt/ui-pro": "^1.3.1",
+    "mqtt": "^5.8.0",
     "nuxt": "^3.12.3",
     "vue": "latest",
     "yup": "^1.4.0"
