--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.1.1",
     "@nuxt/ui": "^2.17.0",
     "@nuxt/ui-pro": "^1.3.1",
     "nuxt": "^3.12.3",
     "vue": "latest",
     "yup": "^1.4.0"
+  },
+  "devDependencies": {
+    "@iconify-json/ic": "^1.1.17",
+    "@iconify-json/mdi": "^1.1.67"
   }
 }
